--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,7 @@ services:
     links:
       - redis
     build: .
+    environment:
+      - AUTOPILOT_API_KEY # This value is picked up from host env variable (if defined) OR alternatively use secrets
     ports:
       - "8080:8080"
