--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,6 @@ services:
       - redis
     build: .
     environment:
-      - AUTOPILOT_API_KEY # This value is picked up from host env variable (if defined) OR alternatively use secrets
+      - AUTOPILOT_API_KEY # This value is picked up from host env variable (if defined) OR alternatively use secrets (preferred to use "Secrets" approch)
     ports:
       - "8080:8080"
